# pdvalidate

./: ..travis.yml  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  build.sh  pandasvalidation.py  pyproject.toml  release-checklist.rst  requirements.txt  setup.py  setup.sh  test_pandasvalidation.py
docs/: .constants.config  create.sh  requirements.txt  spellcheck.sh  update.sh
docs/source/: api.rst  changelog.rst  conf.py  conf.py.bak  contact.rst  index.rst  installation.rst  library.rst  quickstart.rst  spellinglist.txt  validation.rst
docs/source/_static/css/: s5defs.txt
docs/source/_static/tbl/: contact.csv
docs/source/pandas-validation/: api.rst  installation.rst  quickstart.rst
pdvalidate/: __init__.py  _version.py  changelog.py  validation.py
pdvalidate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pylintr/: generate_rcfile.sh  pylintr.sh
pylintr/results/: pdvalidate_changelog.plr  pdvalidate_validation.plr  setup.plr  summary.plr  testlibs_msgs.plr  tests_base.plr  tests_test_validation.plr
tests/: .coverage  .coveragerc  base.py  coverage.sh  run.sh  test_validation.py
tests/resources/data/test_validation/: test01c__validate_date__mask_frame.p  test01d__validate_date__mask_series.p  test03a__validate_string__mask_series.p  test03b__validate_string__mask_series__whitelist.p  test03c__validate_string__mask_series__matching_regex.p  test03d__validate_string__mask_series__non_matching_regex.p  test04a__validate_timestamp.p  test04b__validate_timestamp__non_unique.p
tests/testlibs/: msgs.py
